--- a/index.html
+++ b/index.html
@@ -35,25 +35,27 @@
             </header>
             <main class="main">
                 <section class="get-started">
-                    <div class="get-started_container">
+                    <div class="get-started__container">
                         <div class="get-started__content">
                             <div class="get-started__block-text block-text">
                                 <h1 class="block-text__title block-text__title_blue">Take care of yours family’s <span>health</span> .</h1>
                                 <div class="block-text__text">All in one destination for COVID-19 health queries. Consult 10,000+ health workers about your concerns.</div>
                                 <a href="" class="block-text__button button">GET STARTED</a>
-                            </div>
-                            <a href="" class="get-started__video video-get-started">
+                            </div>         
+                        </div>
+                        <div class="get-started__image">
+                            <img src="img/image01.svg" alt="picture doctor with girl">
+                        </div>
+                        <div class="get-started__video">
+                            <a href="" class="video-get-started">
                                 <div class="video-get-started__icon">
                                     <img src="img/play.svg" alt="button play">
                                 </div>
                                 <div class="video-get-started__body">
                                     <div class="video-get-started__title">Stay safe with GoCorona</div>
                                     <div class="video-get-started__text">Watch Video</div>
-                                </div>                   
-                            </a>          
-                        </div>
-                        <div class="get-started__image">
-                            <img src="img/image01.svg" alt="picture doctor with girl">
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </section>
